2007.01.10: David Nichols
	* JSON-RPC fixes

2007.01.09: David Nichols
	* added makeJSONRPCRequestString(), makeJSONRPCResponseString(), 
	  makeJSONRPCErrorString(), makeFormattedJSONRPCRequestString(), 
	  makeFormattedJSONRPCResponseString(), and 
	  makeFormattedJSONRPCErrorString() functions to lib/ql_json.cc
	* added tests for new functions to test/test.q

2007.01.08: David Nichols
	* fixed a "read from uninitialized memory" error with parsing
	* implemented JSON parsing: "parseJSON()" also added JSON tests to 
	  test.q

2007.01.05: David Nichols
	* more cache invalidation optimizations

2007.01.04: David Nichols
	* finally fixed line-number reporting bug - enabled bison locations,
	  split parse and runtime position tracking, added ParseException class
	* made error reporting more user-friendly by using string aliases 
	  instead of token names in error messages from the parser
	* fixed a bug in line-counting in singly-quoted strings by using flex'
	  yylineno

2006.12.27: David Nichols
	* fixed is_dev() function registration
	* finished implementing sort() with callback
	* added sort with callback tests and tests for is_*() functions
	* implemented List::mergesort() and sortStable() using stl::stable_sort
	  for sorting without a callback and List::mergesort() for
	  sortStable() with a callback - sorting with a callback is 
	  interruptible in case of an exception thrown by the callback function

2006.12.26: David Nichols
	* fixed a race condition with QoreProgram::exportUserFunction()
	* started implementing sort() with a callback comparison function and 
	  sortStable() or sorting with a stable sorting algorithm

2006.12.25: David Nichols
	* removed unused (and buggy) MemberList::copy() method
	* use a map for private object data, removed pviate KeyNode class and
	  greatly simplified the private KeyList class
	* added lib/ql_file.cc with is_file(), is_dir(), is_link(), 
	  is_readable(), etc